--- a/config/config.ini.example
+++ b/config/config.ini.example
@@ -9,23 +9,23 @@
 # Required settings
 ###################
 
-#gmaps-key:                     # Your Google Maps API key
-#auth-service:                  # ptc (default) or google
-#username:                      # Usernames, one per account. (default=[])
-#password:                      # Passwords, either single one for all accounts or one per account. (default=[])
+gmaps-key:                     AIzaSyBKPhfMri_SNIHJdlEdTMBPbKkItgYNuiw
+auth-service:                  ptc
+username:                      imKUCOH
+password:                      R%s4{o2T
 #hash-key:                      # Key for hash server (default=None)
 
 
 # Common settings
 #################
 
-#host:                          # Address to listen on (default='127.0.0.1')
-#port:                          # Port to listen on (default=5000)
+host:                          127.0.0.1
+port:                          5000
 #accountcsv:                    # Load accounts instead from a CSV file containing "auth-service,username,password" lines.
 #speed-scan                     # Use speed-scan as the search scheduler.
 #location:                      # Location, can be an address or coordinates.
-#step-limit:                    # Steps (default=10)
-#scan-delay:                    # Time delay between requests in scan threads. (default=10)
+step-limit:                     10
+scan-delay:                     10
 #no-gyms                        # Disables gym scanning (default=False)
 #no-pokemon                     # Disables pokemon scanning. (default=False)
 #no-pokestops                   # Disables pokestop scanning. (default=False)
@@ -39,12 +39,12 @@
 # Database settings
 ###################
 
-#db-host:                       # Required for mysql ()
-#db-name:                       # Required for mysql
-#db-user:                       # Required for mysql
-#db-pass:                       # Required for mysql
-#db-port:                       # Required for mysql (default=3306)
-#db-threads:                    # Number of db threads; increase if the db queue falls behind. (default=1)
+db-host:                        localhost
+db-name:                        TLHMapping
+db-user:                        magik
+db-pass:                        T0a$tete2017l
+db-port:                        3306
+db-threads:                    1
 
 
 # Scan method (speed-scan preferable, (default is hex-scan)
@@ -77,11 +77,11 @@
 #workers-per-hive:              # Only referenced when using --beehive. Sets number of workers per hive. (default=1)
 #workers:                       # Number of search worker threads to start. (default=#accounts)
 #spawn-delay:                   # Number of seconds after spawn time to wait before scanning to be sure the Pokemon is there. (default=10)
-#kph:                           # Set a maximum speed in km/hour for scanner movement. 0 to disable. (default=35)
+kph: 30                           # Set a maximum speed in km/hour for scanner movement. 0 to disable. (default=35)
 #bad-scan-retry:                # Number of bad scans before giving up on a step. (default=2, 0 to disable)
 #skip-empty                     # Enables skipping of empty cells in normal scans - requires previously populated database. (not to be used with -ss)
 #min-seconds-left:              # Time that must be left on a spawn before considering it too late and skipping it. (default=0)
-#gym-info                       # Enables detailed gym info collection. (default=False)
+gym-info                       # Enables detailed gym info collection. (default=False)
 #pokestop-spinning              # Spin Pokestops with "50%" Chance (default=False)
 #account-max-spins:             # Maximum number of Pokestop spins per hour (default=20)
 #on-demand_timeout:             # Pause searching while web UI is inactive for this timeout (in seconds). (default=0)
@@ -145,7 +145,7 @@
 # Webhook settings
 ##################
 
-#webhook:                       # Webhook URL e.g. http://127.0.0.1:12345 or a list for multiple webhooks
+webhook: http://95.179.202.148:5000                        # Webhook URL e.g. http://127.0.0.1:12345 or a list for multiple webhooks
                                 # [http://127.0.0.1:1345,http://127.0.0.1:12346] (default=None)
 #wh-types:[]                    # List of events to be sent: pokemon, gym, raid, egg, tth, gym-info, pokestop, lure, captcha. (default= nothing)
 #wh-threads:                    # Number of webhook threads; increase if the webhook queue falls behind. (default=1)
