--- a/config/config.ini.example
+++ b/config/config.ini.example
@@ -9,7 +9,7 @@
 # Required settings
 ###################
 
-gmaps-key:                     AIzaSyBKPhfMri_SNIHJdlEdTMBPbKkItgYNuiw
+gmaps-key:                     Google API here
 auth-service:                  ptc
 username:                      imKUCOH
 password:                      R%s4{o2T
